--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "next"
+    "dev": "next",
+    "lint": "standard",
+    "fix": "standard --fix"
   },
   "keywords": [],
   "author": "ynakamura <ynakamura.vla@gmail.com>",
@@ -14,6 +16,8 @@
     "next": "^3.2.2",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
+    "standard": "^10.0.3",
     "styled-components": "^2.2.0"
-  }
+  },
+  "devDependencies": {}
 }
