--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "next": "^3.2.2",
+    "polished": "^1.7.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
     "standard": "^10.0.3",
